front end test design

--- a/index.html
+++ b/index.html
@@ -133,36 +133,36 @@
                                 <img src="Design-set2/Images/top2-2.png" alt="25years" width="150" height="100">
                             </div>
                         </div>
-                        <div style="display: flex; justify-content: center;">
-                            <div class="bgwhite">
-                                <div style="width: 900px;">
-                                    <div class="bgwhite1">
-                                        <div ><a href="#" style="color: red;">Find a Doctor</a></div>
-                                        <div><a href="#" style="color: blue; text-decoration: underline;">View all Doctors</a></div>
-                                    </div>
-                                    <div>
-                                        <div class="selectitems">
-                                            <select name="hos" id="">
-                                                <option value="hospital">Hospital</option>
-                                            </select>
-                                            <select name="spe" id="">
-                                                <option value="speciality">Speciality</option>
-                                            </select>
-                                            <select name="doc" id="">
-                                                <option value="doctors">Doctors</option>
-                                            </select>
-                                            <div class="button-hover1" id="change">
-                                                <button>Search <img src="Design-set2/Icons/search.svg" alt=""></button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <div style="display: flex; justify-content: center;">
+        <div class="bgwhite">
+            <div style="width: 1000px;">
+                <div class="bgwhite1">
+                    <div ><a href="#" style="color: red;">Find a Doctor</a></div>
+                    <div><a href="#" style="color: blue; text-decoration: underline;">View all Doctors</a></div>
+                </div>
+                <div>
+                    <div class="selectitems">
+                        <select name="hos" id="">
+                            <option value="hospital">Hospital</option>
+                        </select>
+                        <select name="spe" id="">
+                            <option value="speciality">Speciality</option>
+                        </select>
+                        <select name="doc" id="">
+                            <option value="doctors">Doctors</option>
+                        </select>
+                        <div class="button-hover1" id="change">
+                            <button>Search <img src="Design-set2/Icons/search.svg" alt="" width="20" height="16"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
